# network-dashboard

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
api/: requirements.txt
api/app/: database.py  main.py  models.py  schemas.py  unifi.py
api/app/routers/: annotations.py  chat.py  events.py  hosts.py  ports.py  scan.py  unifi.py
db/: init.sql
scanner/: Dockerfile  config.yaml.example  go.mod  go.sum  main.go
scanner/config/: config.go
scanner/db/: client.go
scanner/scanner/: fingerprint.go  ports.go  tcp.go  zgrab.go  zmap.go
tui/: Cargo.toml
tui/src/: main.rs
ui/: nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: AnnotationForm.tsx  ChatPage.tsx  Dashboard.tsx  EventHistory.tsx  HostDetail.tsx  HostList.tsx  PortList.tsx  PortsPage.tsx
ui/src/hooks/: useApi.ts  useChat.ts
ui/src/types/: index.ts
ui/src/utils/: ports.ts  time.ts
